--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
   <title>Gotham Image</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
 
